# uiua

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  FUNDING.yml  changelog.md  code_of_conduct.md  contributing.md  features.ua  flake.nix  license  package.nix  readme.md  spec.md  temp.md  test.json  todo.md
.github/: dependabot.yml  features.ua
.github/scripts/: get-release-notes.js
.github/workflows/: build_latest.yml  release.yml  rust.yml  validate.yml
docs/: 404.html  CNAME  index.html  primitives.json  site-142e86e057b08608.js  site-1621391edbd0383d.js  site-17b78c153f2cbf53.js  site-29cedaefa6a1308c.js  site-2b6fbe256ee4c669.js  site-2bd4bb1ac7807182.js  site-2e4d5de61f439d82.js  site-2e918e18c947b64c.js  site-32a3d8fa7fb3618b.js  site-33d2208a8b1facdd.js  site-33d30e0a37e5efe1.js  site-344d039cac92accc.js  site-3d9567b3fa4634a5.js  site-3df18d2c0c2dabcc.js  site-3ec48fa0cf59e6d8.js  site-463f4f976cf3fae6.js  site-47305da36f378bd2.js  site-478a9b456e116849.js  site-4a83dd8db85f5258.js  site-4afe6d08a2b70f64.js  site-4baba40ffa9309d1.js  site-4ed2ffb589350f0f.js  site-5153d017049ea28f.js  site-598be39b71bf5ff1.js  site-59d9f89b96155d72.js  site-5a77106b9ec9ec25.js  site-5c74aff933a63f9a.js  site-6144fd1be672d4b1.js  site-61a34322ef8b405f.js  site-67024ef4a1a41090.js  site-6a2e5a3fd5d36588.js  site-6be85c6e4d73763d.js  site-6cc120855927f025.js  site-70dbaea5710fb717.js  site-72657d51c59816de.js  site-7432ee48b061a1b.js  (+42 more)
docs/blog/: a-uiua-type-system.md  feed.rss  how-the-uiua-logo-works-html.html  how-the-uiua-logo-works-text.md  its-so-over-html.html  second-class-functions-html.html  second-class-functions-text.md  subscripts-html.html  subscripts-text.md  uiua-0.10.0-html.html  uiua-0.10.0-text.md  uiua-0.11.0-html.html  uiua-0.11.0-text.md  uiua-0.12.0-html.html  uiua-0.12.0-text.md  uiua-0.13.0-html.html  uiua-0.13.0-text.md  uiua-0.14.0-html.html  uiua-0.14.0-text.md  uiua-0.15.0-html.html  uiua-0.15.0-text.md  uiua-0.16.0-html.html  (+8 more)
examples/: audio_play.ua  audio_stream.ua  bad_apple.ua  bad_apple_pots.ua  donut.ua  fizzbuzz.ua  flag_blender.ua  goldbach.ua  http_server.ua  life.ua  logo_gif.ua  markov.ua  n-body.ua  nqueens.ua  photobooth.ua  quadratic_formula.ua  raw.ua  shuffle_music.ua  song.ua  spiral.ua  yahtzee.ua
generator/: Cargo.toml
generator/src/: main.rs
nix/: fonts.nix  generator.nix  package.nix  site.nix  sublime-grammar.nix
pad/editor/: .clippy.toml  Cargo.toml
pad/editor/src/: backend.rs  lib.rs  utils.rs  worker_backend.rs  worker_types.rs
pad/worker/: Cargo.toml
pad/worker/src/: backend.rs  lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  complex.rs  defs.rs  ebuf.rs  error.rs  ga.rs  inputs.rs  lex.rs  lib.rs  multivector.rs  parse.rs  primitive.rs  signature.rs  split.rs  subscript.rs
site/: .clippy.toml  Cargo.toml  Trunk.toml  blog_rss.ua  deploy.ua  format_config.md  index.css  index.html  index.scss  primitives.json  readme.md  styles.css  test.md  trunk.toml
site/blog/: feed.rss  how-the-uiua-logo-works-html.html  its-so-over-html.html  its-so-over-text.md  list.txt  second-class-functions-html.html  second-class-functions-text.md  second-class-functions.md  subscripts-html.html  subscripts-text.md  uiua-0.10.0-html.html  uiua-0.10.0-text.md  uiua-0.11.0-html.html  uiua-0.11.0-text.md  uiua-0.12.0-html.html  uiua-0.12.0-text.md  uiua-0.13.0-html.html  uiua-0.13.0-text.md  uiua-0.14.0-html.html  uiua-0.14.0-text.md  uiua-0.15.0-html.html  uiua-0.15.0-text.md  uiua-0.16.0-html.html  uiua-0.16.0-text.md  uiua-0.17.0-html.html  uiua-0.17.0-text.md  uiua-0.18.0-html.html  uiua-0.18.0-text.md  uiuas-official-mascot-html.html  uiuas-official-mascot-text.md  what-will-1-look-like-html.html  what-will-1-look-like-text.md
site/new_tutorial/: Arrays.md  Basic Data Manipulation and Formatting.md  Bindings.md  Control Flow.md  Inverses.md  Macros.md  Modifiers and Functions.md  Modules.md  More Argument Manipulation.md  More Array Manipulation.md  Tacit Code.md  Testing.md  Thinking With Arrays.md  Types.md
site/src/: backend.rs  blog.rs  catalog.rs  docs.rs  editor.rs  examples.rs  idioms.rs  lib.rs  main.rs  markdown.rs  new_tutorial.rs  other.rs  other_tutorial.rs  pad.rs  primitive.rs  tour.rs  tutorial.rs  tutorial2.rs  uiuisms.rs
site/src/docs/: design.rs  mod.rs  other.rs  primitive.rs  technical.rs  tour.rs  tutorial.rs
site/src/editor/: mod.rs  utils.rs
site/text/: code_tactility.md  data_defs.md  design.md  experimental.md  files_and_streams.md  ga.md  idioms.ua  inverses.md  macros.md  more_array.md  ranges.md  strings.md  tacit_code.md  testing.md  tour.md
site/text/other_tutorial/: code_tactility.md  files_and_streams.md  strings.md
site/text/tutorial/: Arrays.md  Basic Data Manipulation and Formatting.md  Control Flow.md  Data Definitions.md  Introduction.md  Inverses.md  Macros.md  Math and Comparison.md  Modules.md  More Argument Manipulation.md  More Array Manipulation.md  Pattern Matching.md  Tacit Code.md  Testing.md  Types.md
site/tutorial/: Bindings.md  Macros.md  Pattern Matching.md  Types.md
site/tutorial2/: Arrays.md  Basic Data Manipulation and Formatting.md  Basic Stack Manipulation and Formatting.md  Introduction.md  Math and Comparison.md
src/: algorithm.rs  array.rs  array2.rs  array_fmt.rs  assembly.rs  ast.rs  boxed.rs  builtin.rs  check.rs  check2.rs  compile.rs  compile2.rs  complex.rs  constant.rs  context.rs  cowslice.rs  empty_types.rs  error.rs  extractor.rs  ffi.rs  fill.rs  format.rs  function.rs  function2.rs  grid_fmt.rs  impl_prim.rs  instr.rs  interpret.rs  io.rs  ir.rs  lex.rs  lib.rs  list.rs  lsp.rs  main.rs  multivector.rs  ops.rs  optimize.rs  parse.rs  pervade.rs  (+18 more)
src/gpu/: mod.rs  (+5 more)
stack/: Cargo.toml
stack/src/: lib.rs  signature.rs
tests/: box.ua  data_defs.ua  dyadic.ua  error.ua  fill.ua  ga.ua  grid.ua  loops.ua  macros.ua  map.ua  module.ua  monadic.ua  optimized.ua  signature.ua  test.ua  try.ua  under.ua  units.ua
tests_ffi/: .clippy.toml  Cargo.toml  fix.ua  test.ua
tests_ffi/src/: lib.rs
tests_special/: error.ua  module.ua  uasm.ua
(+104 files in other folders)
