[package]
name = "uiua-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
comrak = "0.39.0"
either = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
site = { path = "../site", default-features = false, features = ["gen_blog_html"] }
uiua = { path = "..", default-features = false, features = [
  "internal_fmt_doc",
] }
