[package]
description = "Uiua parser implementation"
documentation = "https://docs.rs/uiua_parser"
name = "uiua_parser"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = {workspace = true, features = [
  "must_cast",
  "derive",
  "extern_crate_alloc",
]}
colored.workspace = true
dashmap.workspace = true
ecow.workspace = true
enum-iterator.workspace = true
once_cell.workspace = true
serde = {workspace = true, features = ["rc"]}
unicode-segmentation.workspace = true
serde_tuple = "1.0.0"
