[package]
categories.workspace = true
description = "Uiua parser implementation"
documentation = "https://docs.rs/uiua_parser"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "uiua_parser"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = {workspace = true, features = [
  "must_cast",
  "derive",
  "extern_crate_alloc",
]}
colored.workspace = true
dashmap.workspace = true
ecow.workspace = true
enum-iterator.workspace = true
serde = {workspace = true, features = ["rc"]}
serde_tuple = "1.0.0"
unicode-segmentation.workspace = true
