[package]
description = "Uiua website"
name = "site"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
enum-iterator.workspace = true
js-sys.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
wasm-bindgen.workspace = true
web-sys = {workspace = true, features = ["HtmlElement"]}
comrak = "0.39.0"
console_error_panic_hook = "0.1.7"
uiua = {path = "..", default-features = false, features = ["batteries", "web"]}
uiua-editor = {path = "../pad/editor"}

[features]
audio = [] # Dummy for rust-analyzer
