[package]
categories.workspace = true
description = "Uiua website"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "site"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
base64.workspace = true
comrak = "0.39.0"
console_error_panic_hook = "0.1.7"
enum-iterator.workspace = true
flate2.workspace = true
getrandom = {version = "=0.3.4", features = ["wasm_js"]}
js-sys.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uiua = {path = "..", default-features = false, features = ["batteries", "web"]}
uiua-editor = {path = "../pad/editor"}
urlencoding.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4.43"
web-sys = {workspace = true, features = ["HtmlElement"]}

[features]
audio = [] # Dummy for rust-analyzer
