[package]
categories.workspace = true
description = "Uiua stack implementation"
documentation = "https://docs.rs/uiua_stack"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "uiua_stack"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = {workspace = true, features = ["rc"]}
smallvec = {workspace = true, features = ["serde", "union", "const_new"]}

[lints]
workspace = true
