[package]
description = "Uiua FFI tests"
name = "tests_ffi"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "ffi_lib"

[lints]
workspace = true

[dependencies]
uiua.path = ".."
