[package]
name = "uiua-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
leptos = {version = "0.6.10", features = ["csr"]}
js-sys = "0.3.69"
web-sys = {version = "0.3.70", features = [
  "Window",
  "CustomElementRegistry",
  "CssStyleDeclaration",
  "DomRect",
  "Storage",
  "HtmlAudioElement",
  "HtmlBrElement",
  "Selection",
  "Node",
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Navigator",
  "Permissions",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollLogicalPosition",
  "StorageManager",
  "FileReader",
  "EventInit",
  "DataTransfer",
  "File",
  "FileList",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Performance",
]}
base64 = "0.22.0"
leptos_router = {version = "0.6.11", features = ["csr"]}
leptos-use = "0.12.0"
uiua = {path = "../..", default-features = false}
image = {version = "0.25", optional = true}
unicode-segmentation = "1.10"
urlencoding = "2"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
hound = {version = "3.5.1", optional = true}
serde_json = "1.0.115"
futures = "0.3.30"

[features]
image = ["dep:image", "uiua/image"]
audio_encode = ["dep:hound", "uiua/audio_encode"]
default = ["uiua/batteries", "uiua/web", "image", "audio_encode"]
