[package]
description = "Uiua editor"
name = "uiua-editor"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
base64.workspace = true
hound.workspace = true
js-sys.workspace = true
leptos = {workspace = true, features = ["csr"]}
leptos_router.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
urlencoding.workspace = true
wasm-bindgen.workspace = true
web-sys = {workspace = true, features = ["CustomElementRegistry", "Window"]}
uiua = {path = "../..", default-features = false, features = [
  "batteries",
  "web",
]}
image = "0.25"
leptos-use = "0.12.0"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.30"
