[package]
categories.workspace = true
description = "Uiua editor"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "uiua-editor"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
futures = "0.3.30"
hound.workspace = true
image = "0.25"
js-sys.workspace = true
leptos = {workspace = true, features = ["csr"]}
leptos-use = {version = "0.13.0", default-features = false, features = [
  "use_resize_observer",
]}
leptos_router.workspace = true
serde_json.workspace = true
uiua = {path = "../..", default-features = false, features = [
  "batteries",
  "web",
]}
unicode-segmentation.workspace = true
urlencoding.workspace = true
wasm-bindgen-futures = "0.4.43"
wasm-bindgen.workspace = true
web-sys = {workspace = true, features = ["CustomElementRegistry", "Window"]}
