[package]
name = "uiua-pad-worker"
edition = "2021"
version = "0.1.0"
description = "Uiua pad web worker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uiua = { path = "../..", default-features = false, features = [
  "batteries",
  "web",
] }
uiua-pad-shared = { path = "../shared" }
web-sys = { workspace = true, features = [
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
] }
console_error_panic_hook = "0.1"
image = "0.25"
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4.43"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.5"
js-sys.workspace = true
hound.workspace = true
